--- a/client/src/components/patientComp/Pdashboard.css
+++ b/client/src/components/patientComp/Pdashboard.css
@@ -1,14 +1,23 @@
 .Pdash{
     display: flex;
     flex-direction: column;
-    padding-left: 400px;
-    padding-top: 100px;
+   
+   padding-left: 100px;
+   
+    
 
 }
+.Caro{
+    height: 50vh;
+    width: 1340px;
+    background-color: black;
+    border-radius: 100px;
+    margin-bottom: 60px;
+}
 .Pdash h1{
-    font-size: medium;
+    font-size: 23px;
     font-family: 'Sriracha', cursive;
-
+    text-align: center;
 }
 .Pdash img{
     height: 300px;
@@ -16,4 +25,8 @@
     border-radius: 100px;
     transform: translateX(-310px)
     translateY(-139px);
+}
+.image{
+    height: 30vh;
+    width: 500px;
 }
