--- a/client/src/components/Menu/Menu.css
+++ b/client/src/components/Menu/Menu.css
@@ -6,7 +6,7 @@
     background-color: rgb(173, 187, 231);
     height: 85vh;
     font-family: 'Merienda', cursive;
-    padding-top: 80px;
+    padding-top: 10vh;
    }
 .Menu img{
     height: 200px;
