--- a/client/src/components/patientComp/search-box/search-box.css
+++ b/client/src/components/patientComp/search-box/search-box.css
@@ -7,6 +7,10 @@
     padding: 10px;
     width: 450px;
     line-height: 30px;
-    margin-bottom: 30px;
     margin-left: 15vh;
+}
+
+.dropdown{
+    margin-left: 40vh;
+    margin-bottom: 5vh;
 }
