--- a/client/src/components/doctorComp/prescriptionList/prescriptionList.css
+++ b/client/src/components/doctorComp/prescriptionList/prescriptionList.css
@@ -1,6 +1,7 @@
-.card-list{
+.Presss{
     width: 85vw;
     margin: 0 auto;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
 }
