--- a/client/src/components/patientComp/prescriptionList/prescriptionList.css
+++ b/client/src/components/patientComp/prescriptionList/prescriptionList.css
@@ -2,5 +2,6 @@
     width: 85vw;
     margin: 0 auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    padding: 40px;
 }
