--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Merienda&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,6 +10,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Merienda', cursive;
   font-family: 'Sriracha', cursive;
+  font-family: 'Acme', sans-serif;
 }
 
 code {
