--- a/client/src/components/patientComp/UserCardlist/userCardlist.css
+++ b/client/src/components/patientComp/UserCardlist/userCardlist.css
@@ -1,9 +1,10 @@
-.card-list{
+.Code{
     width: 85vw;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
+    
 }
 
 .heading{
