--- a/client/src/components/Menu/Menu.css
+++ b/client/src/components/Menu/Menu.css
@@ -1,3 +1,4 @@
+
 .Home{
     padding: 40px;
 }
@@ -60,3 +61,73 @@
 }
 
 
+@media (max-width:500px){
+    
+.Menu{
+    padding-top: 20px;
+    background-color: rgb(245, 246, 247);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+   }
+   
+.Content{
+    
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+
+}
+.Content img{
+    height: 300px;
+    width: 320px;
+    transform: translateY(60px)
+    translateX(-40px);
+}
+
+.Con{
+    font-family: 'Acme', sans-serif;
+    
+    width: 90%;
+    transform: translateX(-90px);
+}
+.Con p{
+    font-size: 20px;
+}
+.Con h1{
+    font-size: 35px;
+    color: rgba(2, 9, 49, 0.938);
+}
+.Con button{
+    font-size: 18px;
+    border: 1px solid black;
+    border-radius: 20px;
+    width: 50%;
+    font-weight: 200;
+    background: transparent;
+    transition: 1s;
+    padding: 7px;
+}
+.Con button:hover{
+    border: 1px solid brown;
+    color: brown;
+}
+.Doc{
+    transform: translateX(-30px);
+    text-align: center;
+    width: 350px;
+    height: 30vh;
+
+}
+.Page{
+    background-color: rgb(245, 246, 247);
+    width: 100%;
+    height: 100%;
+}
+.Docc{
+    height: 35vh;
+    width:100%;
+    font-size: 12px;
+}
+}
