--- a/client/src/components/patientComp/prescriptionList/prescriptionList.css
+++ b/client/src/components/patientComp/prescriptionList/prescriptionList.css
@@ -1,7 +1,9 @@
 .card-list{
     width: 85vw;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
+    
     padding: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
+    grid-gap: 20px;
 }
